# anaminapp

anaminapp.api/: .env  db.sqlite3  pyproject.toml
anaminapp.api/app/: api.py  config.py  database.py  routes.py
anaminapp.api/app/center/: controllers.py  models.py  routes.py
anaminapp.api/app/core/: models.py
