[tool.poetry]
name = "anaminapp-api"
version = "0.1.0"
description = ""
authors = ["Thiago Costa Coelho <thiago.costa@grupomateus.com>"]
readme = "README.md"
packages = [{include = "anaminapp"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.109.2"
uvicorn = {extras = ["standard"], version = "^0.27.1"}
sqlalchemy = "^2.0.27"
pymongo = "^4.6.2"
python-dotenv = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
